Use Stream#toList and Stream#toArray