@@ -18,7 +18,6 @@ package org.eclipse.tm4e.core.internal.oniguruma;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.eclipse.jdt.annotation.Nullable;
 
@@ -31,7 +30,7 @@ final class OnigSearcher {
 	private final List<OnigRegExp> regExps;
 
 	OnigSearcher(final Collection<String> regExps) {
-		this.regExps = regExps.stream().map(OnigRegExp::new).collect(Collectors.toList());
+		this.regExps = regExps.stream().map(OnigRegExp::new).toList();
 	}
 
 	@Nullable
